syntax = "proto3";

package epoxy.grpc.streams;

enum EventStream {
    Unknown = 0;
    Test = 1;
    Account = 2;
    User = 3;
    Content = 4;
    Build = 5;
}

